# DOK.Arealanalyse.Process

./: README.md  catalog-info.yaml  pyproject.toml
src/dokanalyse/: __init__.py  constants.py  main.py  metadata.py  processor.py
src/dokanalyse/adapters/: __init__.py  arcgis.py  gdal.py  geofile.py  geojson.py  geopackage.py  ogc_api.py  wfs.py
src/dokanalyse/caching/: caching.py  cli.py  codelist.py  dok_status.py  geofile.py  guidance_data.py  kartgrunnlag.py  kartkatalog.py  not_implemented_datasets.py  xsd.py
src/dokanalyse/drivers/: geojson.py
src/dokanalyse/http_clients/: arcgis.py  ogc_api.py  wfs.py
src/dokanalyse/models/: __init__.py  analysis.py  analysis_response.py  analysis_state.py  arcgis_analysis.py  coverage_quality_response.py  empty_analysis.py  fact_part.py  fact_sheet.py  metadata.py  ogc_api_analysis.py  result_status.py  state_emitter.py  wfs_analysis.py  wfs_response_parser.py
src/dokanalyse/models/config/: __init__.py  auth.py  auth_type.py  coverage_base_service.py  coverage_geojson.py  coverage_gpkg.py  coverage_service.py  coverage_wfs.py  dataset_config.py  feature.py  feature_service.py  layer.py  quality_config.py  quality_indicator.py
src/dokanalyse/models/file_storage/: azure_blob_storage.py
src/dokanalyse/pdf_templates/: fact_sheet.jinja  results.jinja
src/dokanalyse/pdf_templates/assets/: styles.css
src/dokanalyse/pdf_templates/functions/: charts.py  helpers.py
src/dokanalyse/resources/: no.geonorge.dokanalyse.v1.input.schema.json
src/dokanalyse/services/: analyses.py  analysis_runner.py  blob_storage.py  caching.py  codelist.py  config.py  coverage.py  dataset.py  dok_status.py  geolett.py  guidance_data.py  kartkatalog.py  map_image.py  map_image2.py  municipality.py  query_strategies.py  report.py  xml_schema.py
src/dokanalyse/services/fact_sheet/: __init__.py  area_types.py  buildings.py  roads.py
src/dokanalyse/services/file_storage/: __init__.py  azure_blob_storage.py  file_storage.py  local_file_share.py
src/dokanalyse/services/quality/: __init__.py  coverage_quality.py  dataset_quality.py  object_quality.py
src/dokanalyse/services/raster_result/: __init__.py  legend.py
src/dokanalyse/services/wfs_response/: __init__.py  coverage_wfs_response_parser.py  wfs_response_parser.py  wfs_response_parser_base.py
src/dokanalyse/utils/: async_executor.py  caching.py  constants.py  correlation.py  event_loop_manager.py  http_context.py  logger.py  socket_io.py
src/dokanalyse/utils/helpers/: common.py  gdal.py  geometry.py  quality.py  request.py
