[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dokanalyse"
description = "Arealanalyse av DOK-datasett"
version = "0.0.17"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygeoapi",
    "asyncio",
    "nest-asyncio",
    "aiohttp",
    "aiofiles",
    "cachetools",
    "async-lru",
    "Pebble",
    "pydantic>=2.0",
    "jsonschema",
    "pydash",
    "geopandas",
    "matplotlib",
    "cartopy",
    "scipy",
    "OWSLib",
    "pyproj",
    "contextily",
    "Pillow",
    "weasyprint",
    "Markdown",
    "python-socketio[client]",
    "azure-storage-blob",
    "lxml",
    "types-lxml",
    "shapely",
    "PyYAML",
    "flask_http_middleware",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]

[tool.setuptools.package-data]
dokanalyse = [
    "**/*.json",
    "**/*.txt",
    "**/*.jinja",
    "**/*.css",
    "**/*.svg",
    "**/*.ttf",
]

[tool.setuptools]
license-files = []
