[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dokanalyse"
description = "Arealanalyse av DOK-datasett"
version = "0.1.5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygeoapi",
    "asyncio",
    "aiohttp",
    "aiofiles",
    "async-lru",
    "pydantic>=2.0",
    "jsonschema",
    "pydash",
    "geopandas",
    "matplotlib",
    "cartopy",
    "scipy",
    "OWSLib",
    "pyproj",
    "contextily",
    "Pillow",
    "weasyprint",
    "Markdown",
    "python-socketio[client]",
    "azure-storage-blob",
    "lxml",
    "types-lxml",
    "shapely",
    "PyYAML",
    "structlog>=25.5.0",
    "xmltodict>=1.0.4",
    "pygeofilter>=0.3.3",
    "xmlschema>=4.3.1",
    "filelock>=3.20.3",
    "typer>=0.24.1",
]

[project.scripts]
build-dokanalyse-cache = "dokanalyse.caching.cli:main"

[tool.setuptools.package-data]
dokanalyse = [
    "**/*.json",
    "**/*.txt",
    "**/*.jinja",
    "**/*.css",
    "**/*.svg",
    "**/*.ttf",
]

[tool.setuptools]
license-files = []
